@@ -1,3 +1,10 @@
+Development Portal (2016-11-22 shi)
+==============================
+Added div for better alignment of iati-identifier in SAVi
+Added links to participating-org with activity-id in SAVi
+Updated Print-friendly with changes
+
+
 Development Portal (2016-11-18 shi)
 ==============================
 Fixed identifier section in SAVi for longer ids
